feat: att project

--- a/portifolio/angular.json
+++ b/portifolio/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "/Angular/browser/",
             "outputPath": "dist/portifolio",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -101,6 +102,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
